# learn-cpp

./: .gitmodules  README.md  main.cpp
auth/: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  api_auth  cmake_install.cmake  compile_commands.json  cpp.db  main
auth/.cache/clangd/index/: Database.cpp.DD616B78FEB96241.idx  Database.h.D8F3F3A0DA964B61.idx  ListUsersUseCase.cpp.24432C7B224CC822.idx  ListUsersUseCase.h.FC4C6E96B8F61ACE.idx  Model.h.06C1D910BF7E959E.idx  QueryResponse.cpp.D2FE591D8CF2C971.idx  QueryResponse.h.5AF97EF6266C1A6A.idx  Result.cpp.5A729FBF7F06093D.idx  Result.h.D136DD215080E446.idx  SignInUseCase.h.C82B9F88E9E63783.idx  SigninUseCase.cpp.318572C66B14A9AF.idx  SigninUseCase.h.714336CF63050F75.idx  SignupUseCase.cpp.BF558DFD0D7EBF79.idx  SignupUseCase.h.84BDA77068610905.idx  User.cpp.EE774CC7BF3E77EF.idx  User.h.4621148975F1C2E4.idx  UserModel.h.2E03245179000480.idx  main.cpp.B6ADE4B5E15F2529.idx
auth/src/: main.cpp
auth/src/db/: Database.cpp  Database.h  Model.h  QueryResponse.cpp  QueryResponse.h
auth/src/db/migrations/: users.sql
auth/src/db/models/: User.cpp  User.h  UserModel.cpp  UserModel.h
auth/src/db/seeders/: users.sql
auth/src/shared/: Result.cpp  Result.h
auth/src/usecases/: ListUsersUseCase.cpp  ListUsersUseCase.h  SigninUseCase.cpp  SigninUseCase.h  SignupUseCase.cpp  SignupUseCase.h
checkers/: .clang-format  .gitignore
checkers/src/: main.cpp
greetings/: greetings.cpp  greetings.out
tasks/: task1.cpp
tic_tac_toe/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  tic_tac_toe
tic_tac_toe/src/: Board.cpp  Board.h  main.cpp
variable_init/: main.cpp
(+6 files in other folders)
